--- a/WTWR/src/components/ItemModal/ItemModal.css
+++ b/WTWR/src/components/ItemModal/ItemModal.css
@@ -1,18 +1,62 @@
-.mdodal{
+.item-modal_backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.item-modal__content{
     position: relative;
-    
 }
 
-.modal__content{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    left:50%;
-    transform: translateX(-50%);
-
+.item-modal {
+  display: flex;
+  padding: 0;
+  border-radius: 16px;
+  overflow: hidden;
+  background-color: white;
 }
 
-.modal__close{
-    background-color: transparent;
-    border: none;
+.item-modal__close-btn {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  font-family: "Cabinet Grotesk";
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.item-modal__image {
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+}
+
+.item-modal__garment-name {
+  font-family: "Cabinet Grotesk";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  padding: 20px 32px 12px;
+  margin: 0;
+}
+
+.item-modal__weather-condition {
+  font-family: "Cabinet Grotesk";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  padding: 0 0 32px 32px;
+  margin: 0;
 }
