--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,3 +1,8 @@
+.modal_opened{
+  visibility: visible !important;
+}
+
+
 .modal__backdrop {
   position: fixed;
   top: 0;
@@ -25,6 +30,7 @@
   transform: translateX(-50%);
   border-radius: 20px;
   border-width: 1px;
+  visibility: hidden;
 }
 
 .modal__close-button {
