--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,14 +1,7 @@
-footer {
-  position: relative;
-}
-
-.footer__content {
-  position: absolute;
+.footer-content{
   display: flex;
   justify-content: space-between;
-  width: 1358px;
-  height: 20px;
-  top: 1040px;
-  padding: 24px 40px;
-  
+  padding: 0 40px;
+  position: relative;
+  top: 320vh;
 }
