--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -15,8 +15,8 @@ main{
 }
 
 .card__section {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 20px;
-    flex-wrap: wrap;
   }
   
