--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,4 @@
 .profile{
-    display: flex;
-    width: 100%;
+    display: grid;
     padding: 0 40px;
-    justify-content: space-between;
-    top: 0;
 }
