--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -70,7 +70,9 @@
 }
 
 .modal input[type="text"],
-.modal input[type="url"] {
+.modal input[type="url"],
+.modal input[type="email"],
+.modal input[type="password"] {
   width: 100%;
   margin-bottom: 15px;
   border-top: 0;
